--- a/style.css
+++ b/style.css
@@ -1,32 +1,93 @@
-h1, h2, h3, p {
+body {
+    padding: 0px;
+    margin: 0px;
+    height: 95vh;
+    box-sizing: border-box;
+    background-color: rgb(36, 36, 36);
+}
+
+h1,
+h2,
+h3,
+p {
     margin: 0px;
 }
+
 .container {
+    box-sizing: border-box;
     width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 4fr;
+}
+
+.nav {
+    height: 1000px;
+    background-color: rgb(36, 36, 36);
+    color: white;
+    display: grid;
+
+    grid-template-rows: 250px 500px 200px;
+    justify-items: center;
+}
+
+.nav_title {
+
+    display: grid;
+    justify-items: center;
+}
+
+.nav_title h2 {
+    margin-top: 25px;
+}
+
+.brand_icon {
+    margin-top: 20px;
+    width: 400px;
+}
+
+ul {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 60px);
+    padding: 0px;
+    gap: 10px;
+}
+
+li {
+    width: 110px;
+    list-style-type: none;
 }
 
 .main_section {
+    height: 1030px;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr 5fr;
     gap: 5px;
+    background-color: white;
+
 }
 
 .top_bar {
+    padding-bottom: 5px;
+    padding-left: 10px;
     grid-column: 1 / 4;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
-    height: 10rem;
+    height: 7rem;
+    background-color: rgb(36, 36, 36);
+    color: white;
+
 }
 
 .top_bar_upper {
-    border:2px dotted blue;
+
     grid-column: 1 / 3;
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
 
 }
 
@@ -42,36 +103,164 @@ input {
 }
 
 .profile_container {
+    margin-right: 10px;
+    display: grid;
+   
     grid-column: 2 / 3;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: end;
+  
+}
+.profile_container .usericon {
+    margin-left: auto;
+    grid-column: 2 / 3;
+    width: 40px;
+    border-radius: 100px;
+}
+.username {
+    
+    margin-right: auto;
+    grid-column: 3 / 4;
 }
 
 .top_bar_lower {
-    border:2px dotted red;
+
     display: grid;
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: 1fr 4fr;
 }
 
+.welcome {
+    margin-left: 40px;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+.welcome p {
+    grid-column: 2 / 3;
+}
+.username_welcome {
+    grid-column: 2 / 3;
+
+}
+.usericon {
+    margin-right: 10px;
+    width: 60px;
+    border-radius: 100px;
+    grid-column: 1 / 2;
+}
+
+.buttons {
+    padding-right: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+}
+
+button {
+    height: 35px;
+    width: 150px;
+    border-radius: 10px;
+    border: none;
+}
 .main {
+    height: 90%;
+    padding-left: 60px;
+    padding-right: 50px;
+    padding-top: 20px;
+    padding-bottom: 40px;
     grid-column: 1 / 4;
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+    justify-items: center;
+}
 
+.announcements {
+    display: grid;
+    grid-template-rows: 20px 1fr;
+    gap: 20px;
+
+    width: 250px;
+}
+
+.announce_card_container {
+    border: 1px solid rgba(128, 128, 128, 0.092);
+    box-shadow: 2px 5px 10px 0px rgba(128, 128, 128, 0.148);
+    border-radius: 10px;
 }
 
 .projects {
     grid-row: 1 / 3;
-    height: 65vh;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 1fr;
+    grid-auto-flow: row;
+
+}
+
+.proj_cards {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 450px 450px;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 30%));
+    gap: 20px;
+    justify-items: center;
 }
 
 .proj_card {
-    border: 2px dotted black;
+
+    width: 90%;
+    background-color: white;
+    border: 1px solid rgba(128, 128, 128, 0.092);
+    box-shadow: 2px 5px 10px 0px rgba(128, 128, 128, 0.148);
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 10px 1fr;
+}
+
+.card_accent {
+    background-color: rgb(155, 155, 155);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.card_text {
+    margin-left: 10px;
+    padding: 5px;
+    line-height: 1.5;
+
+
+}
+
+.card_title {
+    font-weight: bold;
+}
+
+.card_subtitle {
+    margin-top: 10px;
+    font-size: 15px;
+
 }
 
 .trending {
+    width: 250px;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-rows: 20px 1fr;
+    gap: 20px;
+
+}
+
+.trends {
+    border: 2px solid black;
+    border-radius: 10px;
+    border: 1px solid rgba(128, 128, 128, 0.092);
+    box-shadow: 2px 5px 10px 0px rgba(128, 128, 128, 0.148);
 }
