--- a/style.css
+++ b/style.css
@@ -46,18 +46,38 @@ p {
     width: 400px;
 }
 
-ul {
+.basic_nav {
     display: grid;
     grid-template-rows: repeat(auto-fit, 60px);
     padding: 0px;
     gap: 10px;
 }
 
-li {
-    width: 110px;
-    list-style-type: none;
+.advanced_nav {
+    display: grid;
+    grid-template-rows: repeat(3, 60px);
+    gap: 10px;
+    padding: 0px;
 }
 
+li {
+    width: 215px;
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: left;
+}
+
+.nav_icon {
+    margin-left: 2rem;
+    width: 1.5rem;
+}
+
+.notification {
+    margin-left: 2rem;
+    width: 1.5rem;
+}
 .main_section {
     height: 1030px;
     box-sizing: border-box;
@@ -93,8 +113,14 @@ li {
 
 .search {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 30rem;
     align-items: center;
+   
+}
+
+.search img {
+    margin-left: auto;
+    margin-right: 2rem;
 }
 
 input {
@@ -194,7 +220,24 @@ button {
     border: 1px solid rgba(128, 128, 128, 0.092);
     box-shadow: 2px 5px 10px 0px rgba(128, 128, 128, 0.148);
     border-radius: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 5px;
+    padding: 5px;
+    justify-items: center;
 }
+
+.announce_card {
+    padding: 5px;
+    width: 95%;
+    background-color: rgb(235, 235, 235, .5);
+    border-radius: 5px;
+    font-size: 12px;
+    color: rgb(106, 106, 106);
+    box-shadow: 1px 1px 5px 0px rgb(128, 128, 128);
+}
+
+
 
 .projects {
     grid-row: 1 / 3;
@@ -223,6 +266,11 @@ button {
     border-radius: 10px;
     display: grid;
     grid-template-columns: 10px 1fr;
+
+}
+
+.card_text {
+    display: grid;
 }
 
 .card_accent {
@@ -249,6 +297,18 @@ button {
 
 }
 
+.card_icons {
+    align-items: end;
+    display: grid;
+    grid-template-columns: 1fr 2rem 2rem;
+}
+.card_icon {
+    width: 1.5rem;
+    margin-left: auto;
+    margin-bottom: 10px;
+}
+
+
 .trending {
     width: 250px;
     grid-column: 2 / 3;
@@ -263,4 +323,12 @@ button {
     border-radius: 10px;
     border: 1px solid rgba(128, 128, 128, 0.092);
     box-shadow: 2px 5px 10px 0px rgba(128, 128, 128, 0.148);
+    display: grid;
+    grid-template-rows: repeat(auto-fit, 1fr);
+    padding: 1rem;
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
 }
